[metadata]
name = segprocess
author = zyx
description = Process dense labeled oversegmentation data.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 1 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = segprocess
install_requires =
    zarr==2.18.3
    grapg-tool==2.77
    knossos_utils==0.1
python_requires >= 3.7
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    segprocess = segprocess.__main__:main

[options.extras_require]
dev = flake8

[options.package_data]
segprocess = py.typed

[flake8]
max-line-length = 88
