[metadata]
name = segprocess
author = zyx
description = Process dense labeled oversegmentation data.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
install_requires =
    zarr==2.18.3
    numpy>=1.19.0
    pandas>=1.0.0
    tifffile>=2020.9.3
    dask[distributed]>=2021.10.0
    scipy>=1.5.0
    scikit-image>=0.17.2
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8>=3.9.2
    tox>=3.24.4
    pytest>=6.2.5
    pytest-cov>=2.12.1
    mypy>=0.910
knossos =
    knossos_utils>=0.2.0
viz =
    neuroglancer>=2.20.0
graph =
    graph-tool>=2.40
cloud =
    cloud-volume>=2.0.0
all =
    %(dev)s
    %(knossos)s
    %(viz)s
    %(graph)s
    %(cloud)s

[options.entry_points]
console_scripts =
    segprocess = segprocess.cli.main:main
    segprocess-view = segprocess.cli.neuroglancer_viewer:main

[options.package_data]
segprocess = py.typed

[flake8]
max-line-length = 88